# CocktailRecipeScraper

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
data/: cocktaildb.json  taste.txt
src/: cocktail.rs  main.bak  main.rs  spider.rs  test_cocktails.rs
src/converters/: cocktail_browser.rs  cocktailor.rs  cocktailor.rs.bak  leosbar.rs  mod.rs  opendrinks.rs  opendrinks.rs.bak  social-cocktail.rs  social_cocktail.rs  thecocktaildb.rs  thecocktaildb.rs.bak
testdata/: Willkommen in LEOs Bar.html  margarita.json  vesper.json  vesper2.json
